correcciones de micro servicio vistas por el lider