@@ -4,7 +4,7 @@ import com.aibert.dosw.domain.exceptions.PlanningDomainException;
 import com.aibert.dosw.entrypoints.rest.response.ApiResponse;
 import jakarta.servlet.http.HttpServletRequest;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.security.access.AccessDeniedException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -21,59 +21,75 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @Slf4j
 public class PlanningExceptionHandler {
 
-    /**
-     * Handles generic domain exceptions (400 Bad Request).
-     */
-    @ExceptionHandler(PlanningDomainException.class)
-    public ResponseEntity<ApiResponse<Void>> handleDomainException(
-            PlanningDomainException ex,
-            HttpServletRequest request) {
+        /**
+         * Handles generic domain exceptions (400 Bad Request).
+         */
+        @ExceptionHandler(PlanningDomainException.class)
+        public ResponseEntity<ApiResponse<Void>> handleDomainException(
+                        PlanningDomainException ex,
+                        HttpServletRequest request) {
 
-        log.warn("Domain error [{}]: {}",
-                ex.getErrorCode(), ex.getMessage());
-        return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(ApiResponse.error(
-                        ex.getMessage(),
-                        request.getRequestURI()));
-    }
+                log.warn("Domain error [{}]: {}",
+                                ex.getErrorCode(), ex.getMessage());
+                return ResponseEntity
+                                .status(HttpStatus.BAD_REQUEST)
+                                .body(ApiResponse.error(
+                                                ex.getMessage(),
+                                                request.getRequestURI()));
+        }
 
-    /**
-     * Handles field validation errors (400 Bad Request).
-     */
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ApiResponse<Void>> handleValidation(
-            MethodArgumentNotValidException ex,
-            HttpServletRequest request) {
+        /**
+         * Handles field validation errors (400 Bad Request).
+         */
+        @ExceptionHandler(MethodArgumentNotValidException.class)
+        public ResponseEntity<ApiResponse<Void>> handleValidation(
+                        MethodArgumentNotValidException ex,
+                        HttpServletRequest request) {
 
-        List<String> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
+                List<String> errors = ex.getBindingResult()
+                                .getFieldErrors()
+                                .stream()
+                                .map(FieldError::getDefaultMessage)
+                                .toList();
 
-        log.warn("Validation error: {}", errors);
-        return ResponseEntity
-                .status(HttpStatus.BAD_REQUEST)
-                .body(ApiResponse.validationError(
-                        "Error en los datos enviados",
-                        errors,
-                        request.getRequestURI()));
-    }
+                log.warn("Validation error: {}", errors);
+                return ResponseEntity
+                                .status(HttpStatus.BAD_REQUEST)
+                                .body(ApiResponse.validationError(
+                                                "Error en los datos enviados",
+                                                errors,
+                                                request.getRequestURI()));
+        }
 
-    /**
-     * Handles any uncaught exception (500).
-     */
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiResponse<Void>> handleGeneral(
-            Exception ex,
-            HttpServletRequest request) {
+        /**
+         * Handles any uncaught exception (500).
+         */
+        @ExceptionHandler(Exception.class)
+        public ResponseEntity<ApiResponse<Void>> handleGeneral(
+                        Exception ex,
+                        HttpServletRequest request) {
 
-        log.error("Unexpected error at: {}", request.getRequestURI(), ex);
-        return ResponseEntity
-                .status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(ApiResponse.error(
-                        "Error interno del servidor. Intenta de nuevo.",
-                        request.getRequestURI()));
-    }
+                log.error("Unexpected error at: {}", request.getRequestURI(), ex);
+                return ResponseEntity
+                                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                                .body(ApiResponse.error(
+                                                "Error interno del servidor. Intenta de nuevo.",
+                                                request.getRequestURI()));
+        }
+
+        /**
+         * Handles authorization errors (403 Forbidden).
+         */
+        @ExceptionHandler(AccessDeniedException.class)
+        public ResponseEntity<ApiResponse<Void>> handleAccessDenied(
+                        AccessDeniedException ex,
+                        HttpServletRequest request) {
+
+                log.warn("Access denied at {}: {}", request.getRequestURI(), ex.getMessage());
+                return ResponseEntity
+                                .status(HttpStatus.FORBIDDEN)
+                                .body(ApiResponse.error(
+                                                "No tienes permisos para acceder a este recurso.",
+                                                request.getRequestURI()));
+        }
 }
